[tool.black]
line-length = 110

 

[tool.poetry]
name = "bitcoin-tools"
version = "0.0.1"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "Python tools and library"
homepage = "https://github.com/andreasgriffin"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
