[tool.black]
line-length = 110

 

[tool.poetry]
name = "bitcoin-safe-lib"
version = "0.2.2"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "Python tools and library"
homepage = "https://github.com/andreasgriffin"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "2.2.1" # error in wine/pyinstaller when increased
pyqt6 = "^6.9.0"
bdkpython = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
